# paddle-playground

./: .gitignore  README.md  pyproject.toml
markdowns/: 6MLH-display-case-sales-sheet-2.md  Atosa_Reach-In_Refrigerator_MBF8004GR_MBF8005GR.md  Bev_Air-Ref_Merchandiser-MMR23HC-1-B.md  GDM-06-34-HC~TSL01 EXTTOP.md  Hatco-GR2BW-SpecSheet.md
scripts/: start.py
src/: main.py
src/services/: any_to_pdfs.py  image_to_text.py  pdf_to_image.py  pdf_to_markdowns.py
texts/: image copy.txt  image.txt
